[package]
name = "learning-tower-web"
version = "0.1.0"
authors = ["Mark Gulbrandsen <mark.gulbrandsen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-web = "0.3.7"
tokio = "0.2.21"
serde = "1.0.110"
reqwest = { version = "0.10", features = ["blocking", "json"] }
